--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.20ca8c30aa13b0f0.js" type="module"></script><script src="polyfills.255c077e3e540227.js" type="module"></script><script src="main.7538418d5babfad6.js" type="module"></script>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script src="runtime.20ca8c30aa13b0f0.js" type="module"></script><script src="polyfills.255c077e3e540227.js" type="module"></script><script src="main.5447908baf393a53.js" type="module"></script>
 
 </body></html>
